--- a/semester_project.csproj
+++ b/semester_project.csproj
@@ -9,4 +9,8 @@
 
   <ItemGroup>
     </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 </Project>
